--- a/branch/MP11/ReleaseNotes/ReleaseNote.html
+++ b/branch/MP11/ReleaseNotes/ReleaseNote.html
@@ -59,9 +59,23 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+	<div class="main_title">TVSeries v2.6.9 Maintenance Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Fixed trakt.tv manual synchronize from configuration not working after entering username/password. Needed to close and re-open for changes to take affect.</p></li>
+			<li><p>Fixed series original name being cleared and looked up again after each update scan if not using English for Online Language.</p></li>
+			<li><p>Fixed series original name not being set if there was no english translation online. This could result in error to find subtitles as series name would be empty. Also fixes the issue where online lookup would be done everytime Original name was required.</p></li>
+			<li><p>Updated Subtitle Downloader library to v2.3.0.</p></li>
+		</ul>
+	</div>
+	
 	<div class="main_title">TVSeries v2.6.8 Maintenance Release</div>
 	<div class="tab_bar"> 
-		<div class="tab_text">Change Log since v2.6.7:</div>
+		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
 	</div>
 	<div class="tab_content">
@@ -77,7 +91,7 @@ ul {
 	
 	<div class="main_title">TVSeries v2.6.7 Maintenance Release</div>
 	<div class="tab_bar"> 
-		<div class="tab_text">Change Log since v2.6.6:</div>
+		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
 	</div>
 	<div class="tab_content">
@@ -92,7 +106,7 @@ ul {
 	
 	<div class="main_title">TVSeries v2.6.6 Maintenance Release</div>
 	<div class="tab_bar"> 
-		<div class="tab_text">Change Log since v2.6.5:</div>
+		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
 	</div>
 	<div class="tab_content">
@@ -104,7 +118,7 @@ ul {
 	
 	<div class="main_title">TVSeries v2.6.5 Maintenance Release</div>
 	<div class="tab_bar"> 
-		<div class="tab_text">Change Log since v2.6.4:</div>
+		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
 	</div>
 	<div class="tab_content">
@@ -121,7 +135,7 @@ ul {
 	
 	<div class="main_title">TVSeries v2.6.4 Maintenance Release</div>
 	<div class="tab_bar"> 
-		<div class="tab_text">Change Log since v2.6.3:</div>
+		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
 	</div>
 	<div class="tab_content">
@@ -141,7 +155,7 @@ ul {
 	
 	<div class="main_title">TVSeries v2.6.3 Maintenance Release</div>
 	<div class="tab_bar"> 
-		<div class="tab_text">Change Log since v2.6.2:</div>
+		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
 	</div>
 	<div class="tab_content">
@@ -159,7 +173,7 @@ ul {
 	
 	<div class="main_title">TVSeries v2.6.2 Maintenance Release</div>
 	<div class="tab_bar"> 
-		<div class="tab_text">Change Log since v2.6.1:</div>
+		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
 	</div>
 	<div class="tab_content">	
@@ -197,7 +211,7 @@ ul {
 	
 	<div class="main_title">TVSeries v2.6.1 Maintenance Release</div>
 	<div class="tab_bar"> 
-		<div class="tab_text">Change Log since v2.6.0:</div>
+		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
 	</div>
 	<div class="tab_content">	
