Updated release notes for 2.8.0 release.

--- a/branch/MP11/ReleaseNotes/ReleaseNote.html
+++ b/branch/MP11/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,17 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+	<div class="main_title">TVSeries v2.8.0 Beta Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Added support for follw.it, a social media website allowing you to share with your friends what you have been watching and what you love. If enabled, follw.it will also automatically synchronize rating and watched flags between multiple mp-tvseries installations.</p></li>
+		</ul>
+	</div>
+	
   <div class="main_title">TVSeries v2.7.0 Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
