--- a/branch/MP11/ReleaseNotes/ReleaseNote.html
+++ b/branch/MP11/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,19 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+	<div class="main_title">TVSeries v2.8.1 Beta Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>trakt.tv support is now handled in a seperate process plugin and is no longer configured in tvseries configuration. The installer has been updated to optionally include this feature, after installation be sure to re-enter your username and password in trakt configuration.</p></li>
+			<li><p>Updated French translations, thanks ubela64.</p></li>
+			<li><p>Updated Russian translations, thanks Undel.</p></li>
+		</ul>
+	</div>
+	
 	<div class="main_title">TVSeries v2.8.0 Beta Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
@@ -67,6 +80,24 @@ ul {
 	<div class="tab_content">
 		<ul>
 			<li><p>Added support for follw.it, a social media website allowing you to share with your friends what you have been watching and what you love. If enabled, follw.it will also automatically synchronize rating and watched flags between multiple mp-tvseries installations.</p></li>
+		</ul>
+	</div>
+	
+	<div class="main_title">TVSeries v2.7.1 Maintenance Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Updated trakt.tv watched sync to do ALL episodes that have been scrobbled and or marked as seen online.</p></li>
+      <li><p>Fixed (workaround) for actor images dissapearing when navigating the list. Also fixes flicker in Actors list layout.</p></li>
+      <li><p>Fixed sorting of seasons when seasons numbering used 'Years'. Specials not sorted at end of season list in this case.</p></li>
+      <li><p>Fixed sort order of Double Episodes in DVD Order.</p></li>
+      <li><p>Fixed new series added not automatically downloading fanart under some conditions. Changed option for 'update all existing fanart on import' to disabled. Will always check for missing fanart on series now regardless of setting.</p></li>
+      <li><p>Fixed sort order of episodes added to playlist when adding from the series view.</p></li>      
+      <li><p>Added Episode Index label to playlist blue3wide skin so its easier to identify the selected episode.</p></li>
+      <li><p>Updated translations file with recently added strings. Translators please add new strings from en.xml.</p></li>
 		</ul>
 	</div>
 	
