--- a/branch/MP11/ReleaseNotes/ReleaseNote.html
+++ b/branch/MP11/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,19 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+	<div class="main_title">TVSeries v2.8.2 Beta Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Updated Trakt Plugin to v0.9.2.0.</p></li>
+			<li><p>[API] Fixed Toggled Watched event from the Episode view level.</p></li>
+			<li><p>Fix feature reference to Trakt Plugin in the installer.</p></li>
+		</ul>
+	</div>
+	
 	<div class="main_title">TVSeries v2.8.1 Beta Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
