--- a/branch/MP11/ReleaseNotes/ReleaseNote.html
+++ b/branch/MP11/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,28 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+	<div class="main_title">TVSeries v2.8.3 Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Added Trakt Upgrade to Installer, so settings previously entered in TVSeries will automatically be moved across to new Trakt Plugin.</p></li>
+			<li><p>Fixed Parental Controls not being respected if entering a protected view from ViewTags group view.</p></li>
+			<li><p>Added Expiration to Parental Control Lock, default is 60 minutes. Next time you attempt to enter a view that is protected you will be prompted for pin code again. Lock is still reset when restarting/resuming and when manually setting lock from Actions menu.</p></li>
+			<li><p>[API] Added external access to re-init Skin Settings. This could be useful if a skin wants to edit skinsettings.xml directly from a skin configuration plugin. Call SkinSettings.Init() and skin settings reflect with what changes have been done in xml without having to restart.</p></li>
+			<li><p>Added Skin Settings to disable Fanart from being displayed on a per Layout (list, icons, filmstrip, coverflow) and a per View Level (series, seasons, episodes)</p></li>
+			<li><p>Updated Trakt Plugin to v0.9.3.0.</p></li>
+			<li><p>Added option to disable 'Auto Generation of Episode Titles when Online Data does not Exist', this is hidden in the DBOptions table and is not exposed in UI.</p></li>
+			<li><p>Fixed 'New Episode Indicator' not being correctly set after import.</p></li>
+			<li><p>Renamed option 'Show Only Local Files' to 'Show All Files', new translation string is needed.</p></li>
+			<li><p>Updated Spanish translations.</p></li>
+			<li><p>Fixed date format not respecting regional settings in Video OSD if setting was enabled.</p></li>
+			<li><p>Fixed user edited Episode Names not showing in GUI.</p></li>
+		</ul>
+	</div>
+	
 	<div class="main_title">TVSeries v2.8.2 Beta Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
