--- a/trunk/ReleaseNotes/ReleaseNote.html
+++ b/trunk/ReleaseNotes/ReleaseNote.html
@@ -59,7 +59,7 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
-	<div class="main_title">TVSeries v3.0.0 Beta Release</div>
+	<div class="main_title">TVSeries v3.0.1 Beta Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
 		<div class="tab_img"></div>
@@ -69,6 +69,7 @@ ul {
 			<li><p>Added support for MediaPortal's new Default and DefaultWide skins.</p></li>
 			<li><p>Improved Import process, data is now cached to disk and results in faster imports. Cached series are only removed if the online api reports newer information is available.</p></li>
 			<li><p>Added support for Coverflow layout, only available on supported skins.</p></li>
+			<li><p>Updated TraktPlugin to 0.9.3.1 (same as 0.9.3.0 but compatible with MP 1.2 Beta)</p></li>
 		</ul>
 	</div>
 	
