--- a/branch/MP11/ReleaseNotes/ReleaseNote.html
+++ b/branch/MP11/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,21 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+  <div class="main_title">TVSeries v2.9.0 Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Improved Import process, data is now cached to disk and results in faster imports. Cached series are only removed if the online api reports newer information is available.</p></li>
+			<li><p>Updated Trakt Plugin to v0.9.4.0.</p></li>
+			<li><p>Renamed 'Latest' view to 'Latest Aired', this is more descriptive of what the view will show.</p></li>
+			<li><p>Added 'Download All Episode Information' to Options menu in GUI. Change takes affect next import that gets run.</p></li>
+      <li><p>Added MAX version check into the installer, installations will not be allowed on MediaPortal v1.1.6+ (aka MediaPortal 1.2 Beta). Last Public release supported is MediaPortal 1.2 Alpha (v1.1.5).</p></li>
+		</ul>
+	</div>
+  
 	<div class="main_title">TVSeries v2.8.3 Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
