--- a/ReleaseNotes/ReleaseNote.html
+++ b/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,20 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+  <div class="main_title">TVSeries v3.0.2 Beta Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Renamed 'Latest' view to 'Latest Aired', this is more descriptive of what the view will show.</p></li>
+			<li><p>Added 'Download All Episode Information' to Options menu in GUI. Change takes affect next import that gets run.</p></li>
+			<li><p>Updated TraktPlugin to 0.9.4.0.</p></li>
+      <li><p>Updated Parental Lock image in DefaultWide skin.</p></li>
+		</ul>
+	</div>
+  
 	<div class="main_title">TVSeries v3.0.1 Beta Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
