Fixed missing entries in release notes.

--- a/branch/MP11/ReleaseNotes/ReleaseNote.html
+++ b/branch/MP11/ReleaseNotes/ReleaseNote.html
@@ -66,13 +66,12 @@ ul {
 	</div>
 	<div class="tab_content">
 		<ul>
-			<li><p></p></li>
-			<li><p></p></li>
-			<li><p></p></li>
-			<li><p></p></li>
-			<li><p></p></li>
-			<li><p></p></li>
-			<li><p></p></li>
+			<li><p>Fixed fanart incorrectly shown in episode thumb when series has no online series id.</p></li>
+			<li><p>Added Full episode string in listing when series view is skipped e.g. Recently Added view.</p></li>
+			<li><p>Fixed wrong fanart displayed in background on initial load of Fanart Chooser.</p></li>
+			<li><p>Changed fanart to be sorted by Highest Rated online in Fanart Chooser.</p></li>
+			<li><p>Updated TraktPlugin plugin to v0.9.5.</p></li>
+			<li><p>Fixed Rating/RatingCounts not re-calulating after rating episode/series. Saves waiting for next import of user ratings or series for changes to reflect.</p></li>
 		</ul>
 	</div>
 	
