Updated versioning and release notes in trunk to v3.0.3.

--- a/ReleaseNotes/ReleaseNote.html
+++ b/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,28 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+	<div class="main_title">TVSeries v3.0.3 Beta Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+			<li><p>Fixed fanart incorrectly shown in episode thumb when series has no online series id.</p></li>
+			<li><p>Added Full episode string in listing when series view is skipped e.g. Recently Added view.</p></li>
+			<li><p>Fixed wrong fanart displayed in background on initial load of Fanart Chooser.</p></li>
+			<li><p>Changed fanart to be sorted by Highest Rated online in Fanart Chooser.</p></li>
+			<li><p>Updated Trakt Plugin to v0.9.5.</p></li>
+			<li><p>Fixed Rating/RatingCounts not re-calulating after rating episode/series. Saves waiting for next import of user ratings or series for changes to reflect.</p></li>
+			<li><p>Fix small icon layout for group views in DefaultWide skin.</p></li>
+			<li><p>Added alternative WideBanner layouts for DefaultWide, new default shows more banners and no longer shows selected poster. Alternatives need to be manually edited from TVSeries.xml.</p></li>
+			<li><p>Fix/Tweak width of genres in list layout for series/season views in DefaultWide skin.</p></li>
+			<li><p>Fix missing texture for spin buttons in Actors view in DefaultWide skin.</p></li>
+			<li><p>Updated overlays in all layouts in DefaultWide skin. More fanart is now visible.</p></li>
+			<li><p>Updated default hover image for Default skins.</p></li>
+		</ul>
+	</div>
+	
   <div class="main_title">TVSeries v3.0.2 Beta Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
