--- a/branch/MP11/ReleaseNotes/ReleaseNote.html
+++ b/branch/MP11/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,22 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+  <div class="main_title">TVSeries v2.9.2 Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+      <li><p>Updated TraktPlugin plugin to v1.0.0. Now with GUI supporting a ton of trakt features without having to leave MediaPortal.</p></li>
+      <li><p>Show a Trakt menu item in context menu if trakt plugin is installed, allows for easy jump to Calendar, Recommendations, Trending and Watch List windows. Supported skins can also support this from Hidden Menu.</p></li>
+			<li><p>Updated Hidden Menus in Blue3 skins.</p></li>
+			<li><p>Fixed Ignored series did not re-calculate Episode Counts.</p></li>
+			<li><p>Fixed Series with semi-colon did not display thumbs in WideBanners and Filmstrip layouts.</p></li>
+			<li><p>Updated Subtitle Downloader library to v2.9.</p></li>
+		</ul>
+	</div>
+  
 	<div class="main_title">TVSeries v2.9.1 Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
