Updated Release Notes in trunk.

--- a/ReleaseNotes/ReleaseNote.html
+++ b/ReleaseNotes/ReleaseNote.html
@@ -59,6 +59,23 @@ ul {
 <body scroll="no" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 	<div style="width: 100%;height: 100%;overflow: auto;">
 	
+  <div class="main_title">TVSeries v3.0.5 Release</div>
+	<div class="tab_bar"> 
+		<div class="tab_text">Change Log:</div>
+		<div class="tab_img"></div>
+	</div>
+	<div class="tab_content">
+		<ul>
+      <li><p>Updated TraktPlugin plugin to v1.0.5. Added Shouts to Trakt Context Menu.</p></li>
+      <li><p>Added ability to add custom artwork for series/episodes. See FAQ for more information.</p></li>
+			<li><p>Added ability to parse and lookup episodes using AirDate in the form yyyy-MM-dd.</p></li>
+			<li><p>Added keyboard shortcut 'Y' to add items to playlist. See FAQ for more information.</p></li>
+			<li><p>Added Keyboard shortcut 'F7/F6' to Play Next/Prev in playlist viewer.</p></li>
+      <li><p>Fixed Episode Title matching not working.</p></li>
+      <li><p>Added Finnish translations, thanks mikko.</p></li>
+		</ul>
+	</div>
+  
   <div class="main_title">TVSeries v3.0.4 Release</div>
 	<div class="tab_bar"> 
 		<div class="tab_text">Change Log:</div>
